--- a/templates/message_chanel/index.html.twig
+++ b/templates/message_chanel/index.html.twig
@@ -9,7 +9,7 @@
 <div class="h-screen shadow-lg rounded-lg">
         <!-- headaer -->
     <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
-            <div class="font-semibold text-2xl">{{ chanel.projet.name }}</div>           
+            <div class="font-semibold text-2xl">{{ chanel.projet.name }}</div>
             <div class="font-semibold h-full pr-5 border-r-2 no-underline uppercase">
             <a class="text-gray-500" href="{{ path('message_projet', {'id': chanel.projet.id}) }}">General</a>
             </div>
@@ -22,41 +22,13 @@
     <!-- end header -->
     <!-- Chatting -->
     <div class="h-5/6 flex flex-row justify-between bg-white">
-      <!-- chat list -->
-      <div class="flex flex-col w-1/6 border-r-2 overflow-y-auto">
-        <!-- user list -->
-        <div
-          class="flex flex-row py-4 px-2 justify-center items-center border-b-2"
-        >
-          <div class="w-1/4">
-            <img
-              src="https://source.unsplash.com/_7LbC5J-jw4/600x600"
-              class="object-cover h-12 w-12 rounded-full"
-              alt=""
-            />
-          </div>
-          <div class="w-full">
-            <div class="text-lg font-semibold"><a href="{{ path('message_projet', {'id': chanel.projet.id}) }}" class="text-gray-500">Discussion</a></div>
-          </div>
+      <!-- drive -->
+        <div class="border-r-2 overflow-y-auto">
+            {{ include('file/index.html.twig') }}
         </div>
-        <div class="flex flex-row py-4 px-2 items-center border-b-2">
-          <div class="w-1/4">
-            <img
-              src="https://source.unsplash.com/otT2199XwI8/600x600"
-              class="object-cover h-12 w-12 rounded-full"
-              alt=""
-            />
-          </div>
-          <div class="w-full">
-            <div class="text-lg font-semibold no-underline">
-            <a href="{{ path('message_chanel', {'id': chanel.id}) }}" class="text-gray-500">Drive</a></div>
-          </div>
-        </div>
-        <!-- end user list -->
-      </div>
-      <!-- end chat list -->
+      <!-- drive -->
       <!-- message -->
-      <div class="w-full px-5 flex flex-col justify-between">
+      <div class="w-3/5 px-5 flex flex-col justify-between">
         <div class="h-full flex flex-col mt-5">
         {% for message in messages %}
         {% if app.user.id is same as message.user.id %}
