--- a/templates/message_projet/index.html.twig
+++ b/templates/message_projet/index.html.twig
@@ -9,7 +9,7 @@
 <div class="h-screen shadow-lg rounded-lg">
         <!-- headaer -->
     <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
-            <div class="font-semibold text-2xl">{{ projet.name }}</div>           
+            <div class="font-semibold text-2xl">{{ projet.name }}</div>
             <div class="font-semibold h-full pr-5 border-r-2 no-underline uppercase">
             <a class="text-gray-500" href="#">General</a>
             </div>
@@ -23,40 +23,69 @@
     <!-- Chatting -->
     <div class="h-5/6 flex flex-row justify-between bg-white">
       <!-- chat list -->
-      <div class="flex flex-col w-1/6 border-r-2 overflow-y-auto">
+      <div class="border-r-2 overflow-y-auto">
         <!-- user list -->
-        <div
-          class="flex flex-row py-4 px-2 justify-center items-center border-b-2"
-        >
-          <div class="w-1/4">
-            <img
-              src="https://source.unsplash.com/_7LbC5J-jw4/600x600"
-              class="object-cover h-12 w-12 rounded-full"
-              alt=""
-            />
+
+          <div class="flex justify-center p-4 px-3 py-10">
+              <div class="w-full max-w-md">
+                  <div class="bg-white shadow-md rounded-lg px-3 py-2 mb-4">
+                      <div class="block text-gray-700 text-lg font-semibold py-2 px-2">
+                          Files list
+                      </div>
+                      <div class="flex items-center bg-gray-200 rounded-md">
+                          <div class="pl-2">
+                              <svg class="fill-current text-gray-500 w-6 h-6" xmlns="http://www.w3.org/2000/svg"
+                                   viewBox="0 0 24 24">
+                                  <path class="heroicon-ui"
+                                        d="M16.32 14.9l5.39 5.4a1 1 0 0 1-1.42 1.4l-5.38-5.38a8 8 0 1 1 1.41-1.41zM10 16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z" />
+                              </svg>
+                          </div>
+                          <input
+                                  class="w-full rounded-md bg-gray-200 text-gray-700 leading-tight focus:outline-none py-2 px-2"
+                                  id="search" type="text" placeholder="Search files">
+                      </div>
+                      <div class="py-3 text-sm">
+                          {% for file in files %}
+                              <div class="flex justify-start cursor-pointer text-gray-700 hover:text-blue-400 hover:bg-blue-100 rounded-md px-2 py-2 my-2">
+                                  <span class="bg-gray-400 h-2 w-2 m-2 rounded-full"></span>
+                                  <div class="flex-grow font-medium">
+                                      <a class="hover:font-medium" href="{{ asset('assets/uploads/' ~ file.src) }}">{{ file.name }}</a>
+                                  </div>
+                                  <div class="text-sm font-normal text-gray-500 tracking-wide">
+                                      {{ file.type }}
+                                  </div>
+                                  <div class="text-sm font-normal tracking-wide ml-4">
+                                      <a href="{{ path('file_delete', {id: file.id, projet: projet.id, chanel: 'null'} ) }}">Delete</a>
+                                  </div>
+                              </div>
+                          {% else %}
+                              pas de fichiers
+                          {% endfor %}
+
+                      </div>
+                      <div class="block bg-gray-200 text-sm text-right py-2 px-3 -mx-3 -mb-2 rounded-b-lg">
+                          {{ form_start(formFile) }}
+                          {{ form_widget(formFile.file, {'attr': {'class': 'font-light'}}) }}
+                          <button class="mt-2 px-3 py-1 bg-gray-200 hover:bg-gray-300 focus:shadow-outline focus:outline-none">{{ button_label|default('Upload') }}</button>
+                          {{ form_end(formFile) }}
+                          {% for category, messages in app.flashes %}
+                              {% for message in messages %}
+                                  <div class="text-red-700">
+                                      {{ message }}
+                                  </div>
+                              {% endfor %}
+                          {% endfor %}
+                      </div>
+                  </div>
+              </div>
           </div>
-          <div class="w-full">
-            <div class="text-lg font-semibold"><a href="{{ path('message_projet', {'id': projet.id}) }}" class="text-gray-500">Discussion</a></div>
-          </div>
-        </div>
-        <div class="flex flex-row py-4 px-2 items-center border-b-2">
-          <div class="w-1/4">
-            <img
-              src="https://source.unsplash.com/otT2199XwI8/600x600"
-              class="object-cover h-12 w-12 rounded-full"
-              alt=""
-            />
-          </div>
-          <div class="w-full">
-            <div class="text-lg font-semibold no-underline">
-            <a href="#" class="text-gray-500">Drive</a></div>
-          </div>
-        </div>
-        <!-- end user list -->
+
+
+          <!-- end user list -->
       </div>
       <!-- end chat list -->
       <!-- message -->
-      <div class="w-full px-5 flex flex-col justify-between">
+      <div class="w-3/5 px-5 flex flex-col justify-between">
         <div class="h-full flex flex-col mt-5">
         {% for message in messages %}
         {% if app.user.id is same as message.user.id %}
