--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,14 +28,12 @@
             56 0 57 -52 -5 c-40 -4 -57 -11 -75 -32 l-23 -27 0 30 0 31 -104 0 c-98 0
             -106 -2 -135 -26 l-31 -26 0 26 c0 25 -1 26 -70 26 l-70 0 0 -215z"/>
             </g>
-        </svg> 
+        </svg>
 
     </div>
 
     <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+
 
         {% if app.user %}
             <div class="mb-3">
@@ -61,16 +59,20 @@
                                    value="{{ csrf_token('authenticate') }}"
                             >
 
-                            
+
                             <div class="mt-5 text-right md:space-x-3 md:block flex flex-col-reverse">
                                 <button class="md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500" type="submit">
                                 Sign in
                                 </button>
                             </div>
+                            {% if error %}
+                                <div class="text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            {% endif %}
                     </div>
                 </div>
             </div>
         </div>
+
     </form>
 
     <div class="upText">
@@ -84,6 +86,5 @@
             <div class="toUp">t</div>
             <div class="toUp">y</div>
     </div>
-  
+
 {% endblock %}
- 
