--- a/templates/comment_sujet/_delete_form.html.twig
+++ b/templates/comment_sujet/_delete_form.html.twig
@@ -1,5 +1,5 @@
 
 <form method="delete" action="{{ path('comment_sujet_delete', {'id': message.id}) }}" onsubmit="return confirm('Are you sure you want to delete this message?');">
-    <button class="uk-button uk-button-text">supprimer</button>
+    <button class="underl">SUPPRIMER</button>
 </form>
 
