--- a/templates/projet/index.html.twig
+++ b/templates/projet/index.html.twig
@@ -13,7 +13,7 @@
                             {% for projet in projets %}
                                 <div class="mt-6 min-h-full " >
                                     <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md min-h-full max-h-44 mb-5">
-                                        <div class="mt-2"><a href="{{ path('projet_show', {'id': projet.id}) }}" class="text-2xl font-bold text-gray-700 hover:underline">{{ projet.name }}</a>
+                                        <div class="mt-2"><span class="text-2xl font-bold text-gray-700">{{ projet.name }}</span>
                                             <p class="mt-2 text-gray-600">
                                                 {{ projet.description }}
                                             </p>
@@ -24,13 +24,13 @@
                                                 {% for chanel in projet.chanel %}
                                                     <div>
                                                         {% if chanel.isValidate == 1 %}
-                                                            <a href="{{ path('message_chanel', {'id': chanel.id}) }}">{{ chanel.techno.name }} :  Freelance trouvé!</a>
+                                                            <a href="{{ path('message_chanel', {'id': chanel.id}) }}" class="underl">{{ chanel.techno.name }} :  Freelance trouvé!</a>
                                                         {% else %}
                                                             {{ chanel.techno.name }}
                                                             {% if app.user.roles.0 == "ROLE_FREELANCE" %}
-                                                                <a class="px-2 py-1 font-bold text-gray-100 rounded" style="background-color: green " href="{{ path('chanel_add_user', {'id': chanel.id}) }}">Rejoindre</a>
+                                                                <a class="px-2 py-1 font-bold text-gray-100 rounded underl" style="background-color: green " href="{{ path('chanel_add_user', {'id': chanel.id}) }}">Rejoindre</a>
                                                             {% endif %}
-                                                            <a href="{{ path('chanel_add_user', {'id': chanel.id}) }}" class="uk-button uk-button-text uk-align-right">Participer au projet</a>
+                                                            <a href="{{ path('chanel_add_user', {'id': chanel.id}) }}" class="capitalize underl">Participer au projet</a>
                                                         {% endif %}
                                                     </div>
                                                 {% endfor %}
@@ -38,10 +38,10 @@
                                             <div class="grid grid-cols-1">
                                                 {% if app.user.id == projet.user.id %}
                                                     <div>
-                                                        <a href="{{ path('projet_edit', {'id': projet.id}) }}" class="uk-button uk-button-text uk-align-right">editer</a>
+                                                        <a href="{{ path('projet_edit', {'id': projet.id}) }}" class=" underl">editer</a>
                                                     </div>
                                                     <div>
-                                                        <a href="{{ path('chanel_add', {'projet': projet.id}) }}" class="uk-button uk-button-text uk-align-right">Ajouter chanel</a>
+                                                        <a href="{{ path('chanel_add', {'projet': projet.id}) }}" class=" capitalize underl">Ajouter chanel</a>
                                                     </div>
                                                 {% endif %}
                                             </div>
