--- a/templates/sujet/show.html.twig
+++ b/templates/sujet/show.html.twig
@@ -47,8 +47,8 @@
                             <hr/>
                             {% if app.user.id == message.user.id %}
                                 <div class="flex items-center justify-between mt-4">
-                                    <a href="{{ path('comment_sujet_edit', {id: message.id}) }}"><span class="font-light text-gray-700 hover:underline">EDITER</span></a>
-                                    <a href="{{ path('comment_sujet_delete', {id: message.id}) }}"> <span class="font-light text-gray-700 hover:underline">SUPPRIMER</span></a>
+                                    <a href="{{ path('comment_sujet_edit', {id: message.id}) }}"><span class="font-light text-gray-700 underl">EDITER</span></a>
+                                    <a href="{{ path('comment_sujet_delete', {id: message.id}) }}"> <span class="font-light text-gray-700 underl">SUPPRIMER</span></a>
                                 </div>
                             {% endif %}
                         </div>
@@ -73,7 +73,7 @@
                             <hr/>
                             {% if app.user.id == message.user.id %}
                                 <div class="flex items-center justify-between mt-4 ">
-                                    <a href="{{ path('comment_sujet_edit', {id: message.id}) }}" class="uk-button uk-button-text">modifier</a>
+                                    <a href="{{ path('comment_sujet_edit', {id: message.id}) }}" class="underl">MODIFIER</a>
                                     {{ include('comment_sujet/_delete_form.html.twig') }}
                                 </div>
                             {% endif %}
