--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -44,9 +44,9 @@
                             <hr/>
                             <div class="flex items-center justify-between mt-4">
 
-                                <a href="{{ path("sujet_show", {id: sujet.id}) }}" class="uk-button uk-button-text uk-align-right underl" >Discuter</a>
+                                <a href="{{ path("sujet_show", {id: sujet.id}) }}" class="underl" >DISCUTER</a>
                                 {% if app.user.id == sujet.user.id %}
-                                    <a href="{{ path("sujet_edit", {sujetId: sujet.id}) }}" class="uk-button uk-button-text uk-align-right underl">editer</a>
+                                    <a href="{{ path("sujet_edit", {sujetId: sujet.id}) }}" class="underl">EDITER</a>
 
                                     {{ include('sujet/_delete_form.html.twig') }}
                                 {% endif %}
@@ -85,10 +85,10 @@
                         <h1 class="text-xl font-bold text-gray-700 opac">Links</h1>
                         <div class="flex flex-col max-w-sm px-4 py-6  bg-white rounded-lg shadow-md rightCome">
                             <ul>
-                                <li><a href="{{ path('sujet_new') }}" class="mx-1 font-bold text-gray-700 hover:text-gray-600 underl">-
+                                <li><a href="{{ path('sujet_new') }}" class="underl mx-1 font-bold text-gray-700 hover:text-gray-600 underl">-
                                         Create subject</a></li>
                                 <li class="mt-2">
-                                    <a href="{{ path('topic_new') }}" class="mx-1 font-bold text-gray-700 hover:text-gray-600 underl">-
+                                    <a href="{{ path('topic_new') }}" class="underl mx-1 font-bold text-gray-700 hover:text-gray-600 underl">-
                                         Create topic
                                     </a>
                                 </li>
