ajout bouton + replacement chat

--- a/templates/message_chanel/_form.html.twig
+++ b/templates/message_chanel/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button>{{ button_label|default('Save') }}</button>
+    <button class=" md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500">{{ button_label|default('Post') }}</button>
 {{ form_end(form) }}
