--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -52,6 +52,6 @@
 
     <a class="uk-flex uk-flex-center uk-align-center uk-link-text uk-text-lead"href="{{ path('change_avatar')}}">Change avatar</a>
     <br>
-    <a class="uk-flex uk-flex-center uk-align-center uk-link-text uk-text-lead"href='{{path('user_edit', {id: user.id}) }}'> Edit </a>
+    <a class="uk-flex uk-flex-center uk-align-center uk-link-text uk-text-lead"href='{{path('user_edit', {id: app.user.id}) }}'> Edit </a>
 </div>
 {% endblock %}
