--- a/templates/projet/edit.html.twig
+++ b/templates/projet/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit projet{% endblock %}
 
 {% block body %}
-    <h1>Edit projet</h1>
+    {{ include('nav.html.twig') }}
+    <div class="bg-green-100 p-5 ">
 
     {{ include('projet/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('projet_index') }}">back to list</a>
 
     {{ include('projet/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
