--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block body %}
     <div class="home">
+        
+        <div class="bande">
+            <img src="{{asset('/assets/images/fiverr.png')}}" alt="logo">
+            <p>community</p>
+        </div>
 
         <div class="transitionPage">
 
