--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -15,7 +15,7 @@
                     <div class="flex items-center justify-between">
                         <h1 class="text-xl font-bold text-gray-700 md:text-2xl opac">Post</h1>
                         <div>
-                            <div class="uk-flex uk-flex-center">
+                            <div class="search">
                                 {{ form_start(form) }}
                                 {{ form_widget(form.search) }}
                                 <button>Search</button>
