--- a/templates/sujet/_delete_form.html.twig
+++ b/templates/sujet/_delete_form.html.twig
@@ -1,5 +1,5 @@
 
 <form method="delete" action="{{ path('sujet_delete', {'id': sujet.id}) }}" onsubmit="return confirm('Are you sure you want to delete this subject?');">
-    <button class="font-light text-gray-700 hover:underline">SUPPRIMER</button>
+    <button class="font-light text-red-500 hover:underline">SUPPRIMER</button>
 </form>
 
